--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django>=4.1.3,<4.2
-django-crispy-forms>=1.14.0
+django-crispy-forms>=1.14.0,<2.0
 django-rename-app>0.1.0
 Pillow>0.0.0
 psycopg2>=2.8.6,<2.9
